<resources>
    <string name="app_name">Darbu vācelīte</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="Title">Pievienot vai labot uzdevumu</string>
    <string name="when">Kad?</string>
    <string name="where">Kur?</string>
    <string name="what">Apraksts</string>
    <string name="with_whom">Iesaistītās personas</string>
    <string name="save">SAGLABĀT</string>
    <string name="back">ATCELT</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>