<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/text_view_heigh"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/when"
        app:layout_constraintBaseline_toBaselineOf="@+id/when_text"
        app:layout_constraintEnd_toStartOf="@+id/when_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/text_view_heigh"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/where"
        app:layout_constraintBaseline_toBaselineOf="@+id/where_text"
        app:layout_constraintEnd_toStartOf="@+id/where_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_heigh"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/what"
        app:layout_constraintBaseline_toBaselineOf="@+id/what_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_view_heigh"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/with_whom"
        app:layout_constraintBaseline_toBaselineOf="@+id/with_whom_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/when_text"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove" />

    <TextView
        android:id="@+id/where_text"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/when_text" />

    <TextView
        android:id="@+id/what_text"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/where_text" />

    <TextView
        android:id="@+id/with_whom_text"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_text" />

    <Button
        android:id="@+id/remove"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/ic_baseline_close_24"
        app:layout_constraintBaseline_toBaselineOf="@+id/fix"
        app:layout_constraintEnd_toStartOf="@+id/fix" />

    <Button
        android:id="@+id/fix"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp" />
</android.support.constraint.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
